feat: add upsert semantics for hdts
